# talos

./: .gitignore  Makefile  README.md  VERIFICATIONS.md  pyproject.toml  talos.py
docs/: enhancements.md
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Drawer.tsx  ReapModal.tsx  Views.tsx  api.ts  styles.css  types.ts
talos/: __init__.py  actions.py  api.py  classify.py  cli.py  collect.py  config.py  engine.py  history.py  knowledge.py  llm.py  metadata.py  models.py  network.py  report.py  resources.py  risk.py  signing.py  store.py  uninstall.py
talos/data/: known_processes.yaml
talos/reputation/: __init__.py  asn.py  virustotal.py
tests/: test_safety.py
