[project]
name = "talos"
version = "0.1.0"
description = "Audit every macOS process: identify it, judge its risk, watch its egress, and safely reap the harmless ones."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
talos = "talos.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
